--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
                         <label for="city-search-input"><h2>Search for a City:</h2></label>
                         <input type="text" class="form-control text-center" id="city-search-input" placeholder="Boston">
                     </div>
-                    <button type="button" id="search-btn "class="btn btn-primary btn-lg btn-block">Search</button>
+                    <button type="button" id="search-btn" class="btn btn-primary btn-lg btn-block">Search</button>
                 </form>
             </div>
             <div class="col-8"></div>
         </div>
     </div>
-    
+    <script src="assets/script.js"></script>
 </body>
 </html>
