added js functionality to store search history

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <form>
                     <div class="form-group text-center">
                         <label for="city-search-input"><h2>Search for a City:</h2></label>
-                        <input type="text" class="form-control text-center" id="city-search-input" placeholder="Boston">
+                        <input type="text" class="form-control text-center" id="city-search-input" placeholder="Enter A City">
                     </div>
                     <button type="button" id="search-btn" class="btn btn-primary btn-lg btn-block">Search</button>
                 </form>
