fool proofed the search history system, added onlick functions for the city buttons

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <title>Weather Dashboard</title>
 </head>
 <body>
-    <div class=".container-sm bg-dark">
+    <div class="container-sm bg-dark">
         <h1 class="display-6 text-center text-light">Weather Dashboard</h1>
     </div>
-    <div class=".container">
+    <div class="container">
         <div class="row">
             <div class="col-4">
                 <form>
@@ -22,6 +22,10 @@
                     </div>
                     <button type="button" id="search-btn" class="btn btn-primary btn-lg btn-block">Search</button>
                 </form>
+                <hr/>
+                <div id="history-buttons">
+
+                </div>
             </div>
             <div class="col-8"></div>
         </div>
