--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <title>Weather Dashboard</title>
 </head>
 <body>
-    <div class="container-sm bg-dark">
+    <div class="container-sm bg-dark p-2">
         <h1 class="display-6 text-center text-light">Weather Dashboard</h1>
     </div>
-    <div class="container">
+    <div class="container mt-4">
         <div class="row">
             <div class="col-4">
                 <form>
@@ -24,10 +24,19 @@
                 </form>
                 <hr/>
                 <div id="history-buttons">
-
                 </div>
             </div>
-            <div class="col-8"></div>
+            <div class="col-8">
+                <div class="card" id="current-card">
+                    <div class="card-body" id="current-card-body">
+                        <h3 class="mb-4">City 2/02/2022</h3>
+                        <p class="mb-4">Temp: 9834798534</p>
+                        <p class="mb-4">Wind: 9834798534</p>
+                        <p class="mb-4">Humidity: 9834798534</p>
+                        <p>UV index: 9834798534</p>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     <script src="assets/script.js"></script>
