added current temp, wind, and humidity info to page

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/moment.min.js"></script>
     <link rel="stylesheet" href="assets/style.css">
     <title>Weather Dashboard</title>
 </head>
@@ -29,11 +30,11 @@
             <div class="col-8">
                 <div class="card" id="current-card">
                     <div class="card-body" id="current-card-body">
-                        <h3 class="mb-4">City 2/02/2022</h3>
-                        <p class="mb-4">Temp: 9834798534</p>
-                        <p class="mb-4">Wind: 9834798534</p>
-                        <p class="mb-4">Humidity: 9834798534</p>
-                        <p>UV index: 9834798534</p>
+                        <h3 class="mb-4"></h3>
+                        <p class="mb-4">Temp: </p>
+                        <p class="mb-4">Wind: </p>
+                        <p class="mb-4">Humidity: </p>
+                        <p id="uv-index">UV index: </p>
                     </div>
                 </div>
             </div>
