added one call fetch request to get UV index and 7 day forecast

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 </div>
             </div>
             <div class="col-8">
-                <div class="card" id="current-card">
+                <div class="card d-none" id="current-card">
                     <div class="card-body" id="current-card-body">
                         <h3 class="mb-4"></h3>
                         <p class="mb-4">Temp: </p>
