--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container-sm bg-dark p-2">
         <h1 class="display-6 text-center text-light">Weather Dashboard</h1>
     </div>
-    <div class="container mt-4">
+    <div class="container-fluid m-4">
         <div class="row">
             <div class="col-4">
                 <form>
@@ -37,6 +37,7 @@
                         <p id="uv-index">UV index: </p>
                     </div>
                 </div>
+                <div class="card-group" id="forecast-cards"></div>
             </div>
         </div>
     </div>
