cleaned out the console.log calls in the js

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <div class="container-sm bg-dark p-2">
         <h1 class="display-6 text-center text-light">Weather Dashboard</h1>
     </div>
-    <div class="container-fluid m-4">
-        <div class="row">
+    <div class="container-fluid">
+        <div class="row m-4">
             <div class="col-4">
                 <form>
                     <div class="form-group text-center">
@@ -30,7 +30,7 @@
             <div class="col-8">
                 <div class="card d-none" id="current-card">
                     <div class="card-body" id="current-card-body">
-                        <h3 class="mb-4"></h3>
+                        <h3 class="mb-2"></h3>
                         <p class="mb-4">Temp: </p>
                         <p class="mb-4">Wind: </p>
                         <p class="mb-4">Humidity: </p>
